--- a/index.html
+++ b/index.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <title>Document</title>
 </head>
 <body>
     <h1>Teste landing page networking</h1>
+    <div class="contagem">
+        <table>
+            <tr>
+                <td>
+                    <div class="numero" id="dia"></div>
+                </td></td>
+                <td>
+                    <div class="numero" id="hora"></div>
+                </td>
+                <td>
+                    <div class="numero" id="minuto"></div>
+                </td>
+                <td>
+                    <div class="numero" id="segundo"></div>
+                </td>
+            </tr>
+            <tr style="height:20px">
+                <td>
+                    <p class="legenda">Dias</p>
+                </td>
+                <td>
+                    <p class="legenda">Horas</p>
+                </td>
+                <td>
+                    <p class="legenda">Min</p>
+                </td>
+                <td>
+                    <p class="legenda">Seg</p>
+                </td>
+            </tr>
+        </table>
+    </div>
+    
 </body>
 </html>
+
