Adicionando estratégias de marketing Face e Twitter

--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Facebook Open Graph-->
+    <meta property="og:title" content=" HerMind"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content=""/>
+     <meta property="og:image"content=""/>
+     <meta property="og:url" content=" https://www.hermind.com.br"/>
+    <!--Fim do Facebook Open Graph-->
+
+    <!--Twitter Cards-->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="https://www.hermind.com.br">
+    <meta name="twitter:title" content="">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image"content="">
+    <!--Fim Twitter Cards-->
     <script src="js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
-    <title>Document</title>
+    <title>HerMind</title>
 </head>
 <body>
-    <h1>Teste landing page networking</h1>
+    <h1>Hermid</h1>
     <div class="contagem">
         <table>
             <tr>
@@ -16,13 +31,13 @@
                     <div class="numero" id="dia"></div>
                 </td></td>
                 <td>
-                    <div class="numero" id="hora"></div>
+                    <div class="numero" id="hora">:</div>
                 </td>
                 <td>
                     <div class="numero" id="minuto"></div>
                 </td>
                 <td>
-                    <div class="numero" id="segundo"></div>
+                    <div class="numero" id="segundo">:</div>
                 </td>
             </tr>
             <tr style="height:20px">
