--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>HerMind</title>
 </head>
 <body>
-    <h1>Hermid</h1>
+    <h1>Her Mind</h1>
     <div class="contagem">
         <table>
             <tr>
