--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <meta name="twitter:description" content="">
     <meta name="twitter:image"content="">
     <!--Fim Twitter Cards-->
+    <!-- Hotjar Tracking Code for http://www.hermind.com.br/ -->
+
     <script src="js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <title>HerMind</title>
@@ -56,7 +58,16 @@
             </tr>
         </table>
     </div>
-    
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:1887726,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
 </body>
 </html>
 
