Adicionando arquivo README

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 </head>
 <body>
     <h1>Her Mind</h1>
+    <div class="_form_1"></div>
+    <script src="https://hermindprojeto.activehosted.com/f/embed.php?id=1" type="text/javascript" charset="utf-8"></script>
     <div class="contagem">
         <table>
             <tr>
