Alterando README.md

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
 </head>
 <body>
     <h1>Her Mind</h1>
-    <div class="_form_1"></div>
-    <script src="https://hermindprojeto.activehosted.com/f/embed.php?id=1" type="text/javascript" charset="utf-8"></script>
+    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+    <script>
+    hbspt.forms.create({
+        portalId: "8042520",
+        formId: "2cee326f-6f01-4448-a15d-bd73e0673d63"
+    });
+    </script>
     <div class="contagem">
         <table>
             <tr>
