--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Facebook Open Graph-->
     <meta property="og:title" content=" HerMind"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:description" content=""/>
-     <meta property="og:image"content=""/>
-     <meta property="og:url" content=" https://www.hermind.com.br"/>
+    <meta property="og:type" content="Autocuidado e Saúde Mental da Mulher durante isolamento"/>
+    <meta property="og:description" content="Somos um portal de conteúdo feito por e para mulheres que querem falar 
+    sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade."/>
+    <meta property="og:image"content="https://www.hermind.com.br/img/hermind.jpeg"/>
+    <meta property="og:url" content=" https://www.hermind.com.br"/>
     <!--Fim do Facebook Open Graph-->
 
     <!--Twitter Cards-->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://www.hermind.com.br">
-    <meta name="twitter:title" content="">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image"content="">
+    <meta name="twitter:title" content="Autocuidado e Saúde Mental da Mulher durante isolamento">
+    <meta name="twitter:description" content="Somos um portal de conteúdo feito por e para mulheres que querem falar 
+    sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade.">
+    <meta name="twitter:image"content="https://www.hermind.com.br/img/hermind.jpeg">
     <!--Fim Twitter Cards-->
     <!-- Hotjar Tracking Code for http://www.hermind.com.br/ -->
 
@@ -25,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <title>HerMind</title>
 </head>
-<body>
+<body class="fundo">
     <header>
         <a href="https://www.hermind.com.br">
             <img class="icone" src="./img/hermind.jpeg" alt="Her Mind">
