--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Autocuidado e Saúde Mental da Mulher durante isolamento">
+    <meta name="description" content="Somos um portal de conteúdo feito por e para mulheres que querem falar 
+    sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade.">
+    
     <!--Facebook Open Graph-->
     <meta property="og:title" content=" HerMind"/>
     <meta property="og:type" content="Autocuidado e Saúde Mental da Mulher durante isolamento"/>
@@ -27,7 +31,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <title>HerMind</title>
 </head>
-<body class="fundo">
+<body onload="atualizaContador()">
     <header>
         <a href="https://www.hermind.com.br">
             <img class="icone" src="./img/hermind.jpeg" alt="Her Mind">
@@ -57,36 +61,8 @@
         </div><!--Fim descricao-->
     
         <div class="contagem">
-            <table>
-                <tr>
-                    <td>
-                        <div class="numero" id="dia"></div>
-                    </td></td>
-                    <td>
-                        <div class="numero" id="hora">:</div>
-                    </td>
-                    <td>
-                        <div class="numero" id="minuto"></div>
-                    </td>
-                    <td>
-                        <div class="numero" id="segundo">:</div>
-                    </td>
-                </tr>
-                <tr style="height:20px">
-                    <td>
-                        <p class="legenda">Dias</p>
-                    </td>
-                    <td>
-                        <p class="legenda">Horas</p>
-                    </td>
-                    <td>
-                        <p class="legenda">Min</p>
-                    </td>
-                    <td>
-                        <p class="legenda">Seg</p>
-                    </td>
-                </tr>
-            </table>
+            <h3>Contagem regressiva para Live</h3>
+            <span id="contador"></span>
         </div><!--Fim contagem-->
    
     </div><!--Fim container-->
