--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div><!--Fim descricao-->
     
         <div class="contagem">
-            <h3>Contagem regressiva para Live</h3>
+            <h3>Contagem regressiva para Live:</h3>
             <span id="contador"></span>
         </div><!--Fim contagem-->
    
