--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <script src="js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
-    <title>HerMind</title>
+    <title>Her Mind</title>
 </head>
 <body class="fundo">
     <header>
@@ -57,36 +57,8 @@
         </div><!--Fim descricao-->
     
         <div class="contagem">
-            <table>
-                <tr>
-                    <td>
-                        <div class="numero" id="dia"></div>
-                    </td></td>
-                    <td>
-                        <div class="numero" id="hora">:</div>
-                    </td>
-                    <td>
-                        <div class="numero" id="minuto"></div>
-                    </td>
-                    <td>
-                        <div class="numero" id="segundo">:</div>
-                    </td>
-                </tr>
-                <tr style="height:20px">
-                    <td>
-                        <p class="legenda">Dias</p>
-                    </td>
-                    <td>
-                        <p class="legenda">Horas</p>
-                    </td>
-                    <td>
-                        <p class="legenda">Min</p>
-                    </td>
-                    <td>
-                        <p class="legenda">Seg</p>
-                    </td>
-                </tr>
-            </table>
+            <h3>Contagem regressiva para Live: </h3>
+            <span id="contador"></span>
         </div><!--Fim contagem-->
    
     </div><!--Fim container-->
