Alteração no home

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Autocuidado e Saúde Mental da Mulher durante isolamento">
+    <meta name="description" content="Somos um portal de conteúdo feito por e para mulheres que querem falar 
+    sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade.">
     <!--Facebook Open Graph-->
     <meta property="og:title" content=" HerMind"/>
     <meta property="og:type" content="Autocuidado e Saúde Mental da Mulher durante isolamento"/>
