Alteração no home

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Somos um portal de conteúdo feito por e para mulheres que querem falar 
     sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade.">
     <!--Facebook Open Graph-->
-    <meta property="og:title" content=" HerMind"/>
-    <meta property="og:type" content="Autocuidado e Saúde Mental da Mulher durante isolamento"/>
+    <meta property="og:title" content="Autocuidado e Saúde Mental da Mulher durante isolamento"/>
+    <meta property="og:type" content="website"/>
     <meta property="og:description" content="Somos um portal de conteúdo feito por e para mulheres que querem falar 
     sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade."/>
     <meta property="og:image"content="https://www.hermind.com.br/img/hermind.jpeg"/>
