Alteração no home

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body onload="atualizaContador()">
     <div>
-        <img class="fundo imagem" src="./img/fundo.png" alt="Imagem de Fundo Moça pulando de braços abertos">
+        <img class="rectangle imagem" src="./img/fundo.png" alt="Imagem de Fundo Moça pulando de braços abertos">
     </div>
     <header>
         <a href="https://www.hermind.com.br" title="Site Her Mind">
