--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade.">
     <!--Facebook Open Graph-->
     <meta property="og:title" content="Autocuidado e Saúde Mental da Mulher durante isolamento"/>
-    <meta property="og:type" content="website"/>
+    <meta property="og:type" content="web"/>
     <meta property="og:description" content="Somos um portal de conteúdo feito por e para mulheres que querem falar 
     sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade."/>
     <meta property="og:image"content="https://www.hermind.com.br/img/hermind.jpeg"/>
@@ -32,7 +32,7 @@
 </head>
 <body onload="atualizaContador()">
     <div>
-        <img class="rectangle imagem" src="./img/fundo.png" alt="Imagem de Fundo Moça pulando de braços abertos">
+        <img class="fundo imagem" src="./img/fundo.png" alt="Imagem de Fundo Moça pulando de braços abertos">
     </div>
     <header>
         <a href="https://www.hermind.com.br" title="Site Her Mind">
