--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             </div>
                             <div class="_button-wrapper _inline-style">
                               <button id="_form_1_submit" class="_submit" type="submit">
-                                Enviar
+                                Eu quero!
                               </button>
                             </div>
                             <div class="_clear-element">
