--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" type="text/css" href="./css/estilo.css" />
     <title>Her Mind</title>
 </head>
-<body onload="atualizaContador()" onmouseleave="alertaSaida()">
+<body onload="atualizaContador()">
     <div class="container">
         <div class="row">
             <header>
@@ -92,6 +92,30 @@
         </div><!--Fim row-->
     </div><!--Fim container-->
     
+    <!--Modal-->
+    <style>#exampleModal{}</style>
+    <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Her Mind Informa!</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Não se esqueça de preencher o formulário para receber 
+                  mais informações sobre o projeto antes de sair.</p>
+            </div>
+            <!--
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+            -->
+          </div>
+        </div>
+      </div>
+      <!--Fim Modal-->
 
 </body>
 </html>
