--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,12 @@
     <meta name="description" content="Somos um portal de conteúdo feito por e para mulheres que querem falar 
     sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade.">
     <!--Facebook Open Graph-->
-    <meta property="og:type" content="web"/>
-    <meta property="og:title" content="Autocuidado e Saúde Mental da Mulher durante isolamento"/>
+    <meta property="og:type" content="web" />
+    <meta property="og:title" content="Autocuidado e Saúde Mental da Mulher durante isolamento" />
     <meta property="og:description" content="Somos um portal de conteúdo feito por e para mulheres que querem falar 
-    sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade."/>
-    <meta property="og:image"content="https://www.hermind.com.br/img/hermind.jpeg"/>
-    <meta property="og:url" content=" https://www.hermind.com.br"/>
+    sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade." />
+    <meta property="og:image" content="https://www.hermind.com.br/img/hermind.jpeg" />
+    <meta property="og:url" content=" https://www.hermind.com.br" />
     <!--Fim do Facebook Open Graph-->
 
     <!--Twitter Cards-->
@@ -21,59 +22,81 @@
     <meta name="twitter:title" content="Autocuidado e Saúde Mental da Mulher durante isolamento">
     <meta name="twitter:description" content="Somos um portal de conteúdo feito por e para mulheres que querem falar 
     sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade.">
-    <meta name="twitter:image"content="https://www.hermind.com.br/img/hermind.jpeg">
+    <meta name="twitter:image" content="https://www.hermind.com.br/img/hermind.jpeg">
     <!--Fim Twitter Cards-->
     <!-- Hotjar Tracking Code for http://www.hermind.com.br/ -->
 
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <script src="js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/estilo.css" />
     <title>Her Mind</title>
 </head>
+
 <body onload="atualizaContador()">
     <div class="container">
         <div class="row">
+            <div>
+                <img class="fundo-coral" src="./img/Background_Banner.png" alt="">
+            </div>
             <header>
-                <img class="icone" src="./img/hermind.jpeg" alt="">
-                <h1>Her Mind</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Enim illo deserunt tempore, obcaecati dolore rerum nulla. 
-                    Modi ex omnis sunt vero, earum accusantium saepe nobis totam 
-                    iste, numquam veniam impedit?
-                </p>
-                <div class="contador">
-                    <h3>A LIVE COMEÇA EM:</h3>
-                    <span id="contador"></span>
-                </div><!--Fim contagem-->
+                <div class="header-esquerdo">
+                    <img class="icone" src="./img/Logo_banner.png" alt="">
+                    <h1>Live Saúde Mental da Mulher durante pandemia</h1>
+                    <p>Neste evento, iremos dialogar com especialistas sobre a importância da saúde mental, como criar e
+                        manter bons hábitos para enfrentar essa fase de pandemia.</p>
+                        <p>Evento totalmente <span class="negrito1">ONLINE</span> e <span class="negrito1">GRATUITO</span>.</p>
+                        <p>Queremos ajudar mulheres a terem um olhar sobre a saúde emocional durante esse momento de
+                        distanciamento e trazer ensinamentos práticos para o dia a dia.</p>
+                        <p>Inscreva-se no formulário para não perder essa oportunidade!</p>
+                    <div class="contador">
+                        <h3>A LIVE COMEÇA EM:</h3>
+                        <span id="contador"></span>
+                    </div>
+                    <!--Fim contagem-->
+                </div>
+                <div class="header-direito">
+                    <img src="./img/Image_Banner.png" alt="">
+                </div>
             </header>
-        </div><!--Fim row-->
-        <div class="row"> 
+        </div>
+        <!--Fim row-->
+        <div class="row">
             <div class="col-sm">
                 Imagem 1
-            </div><!--Fim col-sm-->
+            </div>
+            <!--Fim col-sm-->
             <div class="col-sm">
                 <h2>Sobre a Her Mind</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Enim illo deserunt tempore, obcaecati dolore rerum nulla. 
-                    Modi ex omnis sunt vero, earum accusantium saepe nobis totam 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Enim illo deserunt tempore, obcaecati dolore rerum nulla.
+                    Modi ex omnis sunt vero, earum accusantium saepe nobis totam
                     iste, numquam veniam impedit?
                 </p>
-            </div><!--Fim col-sm-->
-        </div><!--Fim row-->
+            </div>
+            <!--Fim col-sm-->
+        </div>
+        <!--Fim row-->
         <div class="row">
             <h2>Sobre a Live</h2>
         </div>
         <div class="row">
             <div class="col-sm">
-                
+
                 <span>Fulana 1</span>
             </div>
             <div class="col-sm">
@@ -84,36 +107,40 @@
                 <img src="" alt="Convidada 3">
                 <span>Fulana 3</span>
             </div>
-        </div><!--Fim row-->
+        </div>
+        <!--Fim row-->
         <div class="row">
             <footer>
                 Rodape
             </footer>
-        </div><!--Fim row-->
-    </div><!--Fim container-->
-    
+        </div>
+        <!--Fim row-->
+    </div>
+    <!--Fim container-->
+
     <!--Modal-->
     <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
         <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Her Mind Informa!</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p>Não se esqueça de preencher o formulário para receber 
-                  mais informações sobre o projeto antes de sair.</p>
-            </div>
-            <!--
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Her Mind Informa!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Não se esqueça de preencher o formulário para receber
+                        mais informações sobre o projeto antes de sair.</p>
+                </div>
+                <!--
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
             -->
-          </div>
+            </div>
         </div>
-      </div>
-      <!--Fim Modal-->
+    </div>
+    <!--Fim Modal-->
 </body>
+
 </html>
