--- a/home.html
+++ b/home.html
@@ -77,20 +77,26 @@
         <!--Fim row-->
         <div class="row">
             <div class="col-sm">
-                Imagem 1
+                <img class="displayed" src="./img/woman_background.png" alt="Figura de mulheres abraçando">
             </div>
             <!--Fim col-sm-->
             <div class="col-sm">
-                <h2>Sobre a Her Mind</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <div class="centro">
+                    <h2 class="titulo centralizar">Sobre a Her Mind</h2>
+                    <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Enim illo deserunt tempore, obcaecati dolore rerum nulla.
                     Modi ex omnis sunt vero, earum accusantium saepe nobis totam
                     iste, numquam veniam impedit?
-                </p>
+                    </p>
+                </div>
+                
             </div>
             <!--Fim col-sm-->
         </div>
         <!--Fim row-->
+        <div class="live">
+
+        </div>
         <div class="row">
             <h2>Sobre a Live</h2>
         </div>
