--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
     sobre saúde mental. Aqui nós nos importamos com temas como autocuidado, autoestima, empoderamento e sororidade.">
     <meta name="twitter:image" content="https://www.hermind.com.br/img/hermind.jpeg">
     <!--Fim Twitter Cards-->
+    <link href="//db.onlinewebfonts.com/c/c070eca0b747d1e84f7099e112a8c7d6?family=Circe+Rounded" rel="stylesheet" type="text/css"/>
     <!-- Hotjar Tracking Code for http://www.hermind.com.br/ -->
 
     <!-- CSS only -->
@@ -115,9 +116,9 @@
             </div>
         </div>
         <!--Fim row-->
-        <div class="row">
-            <footer>
-                Rodape
+        <div class="row rodape">
+            <footer class=>
+                <button type="button" class="btn" id="grad" data-toggle="modal" data-target="#modalForm"><span>INSCREVA-SE AQUI</span></button>
             </footer>
         </div>
         <!--Fim row-->
@@ -147,6 +148,26 @@
         </div>
     </div>
     <!--Fim Modal-->
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body">
+            ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn" id="grad"><span>INSCREVA-SE AQUI</span></button>
+            </div>
+        </div>
+        </div>
+    </div>
 </body>
 
 </html>
