--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
 </head>
 
 <body onload="atualizaContador()">
-    <div class="container">
+    <!-- <div class="container"> -->
         <div class="row">
             <div>
                 <img class="fundo-coral" src="./img/Background_Banner.png" alt="">
@@ -105,25 +105,33 @@
                 <div class="align-guests-imgs">
                     <div class="guest-block">
                         <img src="./img/Convidada1.png" alt="Convidada 1" class="guest-img">
-                        <span>Convidada 1</span>
+                        <span>Anna Beatriz Frederickson</span>
+                        <p>@anninhafred | Publicitária e Produtora de conteúdo</p>
+                        <p class="pode-tirar">Publicitária e produtora de conteúdo. Seu trabalho envolve dicas de autocuidado, moda, beleza e autoestima das mulheres. Uniu-se a nós com para dialogar sobre autocuidado, saúde e bem estar  da mulher.</p>
                     </div>
                     <div class="guest-block">
                     <img src="./img/Convidada2.png" alt="Convidada 2" class="guest-img">
-                    <span>Convidada 1</span>
+                    <span>Fernanda Navarro</span>
+                    <p>@fernandanavarrooficial | Psicologa Especialista pela USP</p>
+                    <p class="pode-tirar">Psicologa Especialista pela USP,  personal das emoções, Hipnoterapeuta e faz sessões de terapia online. Atua em diversas áreas do desconforto emocional, para auxiliar o alcance do Bem-Estar Emocional e um Novo Estilo de Vida.</p>
                     </div>
                     <div class="guest-block">
                         <img src="./img/Convidada3.png" alt="Convidada 3" class="guest-img">
-                        <span>Convidada 1</span>
+                        <span>Josie Remer</span>
+                        <p>@josieremer | Digital Influencer de Curitiba</p>
+                        <p class="pode-tirar">26 anos, digital influencer de Curitiba PR, aborda assuntos como empoderamento feminino e amor próprio. Seu maior propósito de vida é ajudar mulheres em sua caminhada de auto conhecimento.</p>
+                    </div>
+                    <div class="guest-block">
+                        <img src="./img/Convidada4.png" alt="Convidada 3" class="guest-img">
+                        <span>Julia Santana</span>
+                        <p>@baddiesantana | Comunicóloga, ativista e modelo</p>
+                        <p class="pode-tirar">Comunicóloga, ativista do movimento body positive e do movimento negro, modelo plus size e criadora de conteúdo.</p>
                     </div>
                 </div>
-                <span class="desc-third-section">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ratione vitae cupiditate soluta placeat tempora ex atque necessitatibus quidem, iusto amet facere quam, unde nostrum! Voluptatibus sit odio eligendi ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis excepturi dignissimos, nostrum facilis eveniet possimus harum suscipit, earum quibusdam id, cum praesentium consectetur magni in deserunt amet! Veniam, debitis vitae!
+                <!-- <span class="desc-third-section">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ratione vitae cupiditate soluta placeat tempora ex atque necessitatibus quidem, iusto amet facere quam, unde nostrum! Voluptatibus sit odio eligendi ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis excepturi dignissimos, nostrum facilis eveniet possimus harum suscipit, earum quibusdam id, cum praesentium consectetur magni in deserunt amet! Veniam, debitis vitae! -->
                 </span>
             </div>
-        </div>
-<<<<<<< HEAD
-
-=======
->>>>>>> de9c818e5d0536270fa99b494f0d6df3cd5eba34
+        <!-- </div> -->
     </div>
         <!--Fim row-->
         <div class="row rodape">
