--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- <div class="container"> -->
         <div class="row">
             <div>
-                <img class="fundo-coral" src="./img/Background_Banner.png" alt="">
+                <img class="fundo-coral" src="./img/Background_Banner_Compactado.png" alt="">
             </div>
             <header>
                 <div class="header-esquerdo">
