--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <!--Fim contagem-->
             </div>
             <div class="header-direito">
-                <img src="./img/influencers-removebg.png" alt="">
+                <img src="./img/Image_Banner.png" alt="">
             </div>
         </header>
     </div>
