Atualizar formato das fotos

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     <!-- <div class="container"> -->
     <div class="row">
         <div>
-            <img class="fundo-coral" src="./img/Background_Banner_Compactado.png" alt="">
+            <img class="fundo-coral" src="./img/Background_Banner.webp" alt="">
         </div>
         <header>
             <div class="header-esquerdo">
-                <img class="icone" src="./img/Logo_banner.png" alt="">
+                <img class="icone" src="./img/Logo_banner.webp" alt="">
                 <h1>Live Saúde Mental da Mulher durante pandemia</h1>
                 <p>Neste evento, iremos dialogar com especialistas sobre a importância da saúde mental, como criar e
                     manter bons hábitos para enfrentar essa fase de pandemia.</p>
@@ -83,14 +83,14 @@
                 <!--Fim contagem-->
             </div>
             <div class="header-direito">
-                <img src="./img/Image_Banner.png" alt="">
+                <img src="./img/Image_Banner.webp" alt="">
             </div>
         </header>
     </div>
     <!--Fim row-->
     <div class="row sobre">
         <div class="col-sm-6">
-            <img class="displayed" src="./img/woman_background.png" alt="Figura de mulheres abraçando">
+            <img class="displayed" src="./img/Woman_background.webp" alt="Figura de mulheres abraçando">
         </div>
         <!--Fim col-sm-->
         <div class="col-sm-6">
@@ -115,7 +115,7 @@
             <span class="title-third-section">Sobre a Live</span>
             <div class="align-guests-imgs">
                 <div class="guest-block">
-                    <img src="./img/Convidada1.png" alt="Convidada 1" class="guest-img">
+                    <img src="./img/Convidada1.webp" alt="Convidada 1" class="guest-img">
                     <span>Anna Beatriz Frederickson</span>
                     <p>@anninhafred | Publicitária e Produtora de conteúdo</p>
                     <p class="pode-tirar">Publicitária e produtora de conteúdo. Seu trabalho envolve dicas de
@@ -123,7 +123,7 @@
                         autocuidado, saúde e bem estar da mulher.</p>
                 </div>
                 <div class="guest-block">
-                    <img src="./img/Convidada2.png" alt="Convidada 2" class="guest-img">
+                    <img src="./img/Convidada2.webp" alt="Convidada 2" class="guest-img">
                     <span>Fernanda Navarro</span>
                     <p>@fernandanavarrooficial | Psicologa Especialista pela USP</p>
                     <p class="pode-tirar">Psicologa Especialista pela USP, personal das emoções, Hipnoterapeuta e faz
@@ -131,7 +131,7 @@
                         alcance do Bem-Estar Emocional e um Novo Estilo de Vida.</p>
                 </div>
                 <div class="guest-block">
-                    <img src="./img/Convidada3.png" alt="Convidada 3" class="guest-img">
+                    <img src="./img/Convidada3.webp" alt="Convidada 3" class="guest-img">
                     <span>Josie Remer</span>
                     <p>@josieremer | Digital Influencer de Curitiba</p>
                     <p class="pode-tirar">26 anos, digital influencer de Curitiba PR, aborda assuntos como empoderamento
@@ -139,7 +139,7 @@
                         conhecimento.</p>
                 </div>
                 <div class="guest-block">
-                    <img src="./img/Convidada4.png" alt="Convidada 3" class="guest-img">
+                    <img src="./img/Convidada4.webp" alt="Convidada 3" class="guest-img">
                     <span>Juliana Santana</span>
                     <p>@baddiesantana | Comunicóloga, ativista e modelo</p>
                     <p class="pode-tirar">Comunicóloga, ativista do movimento body positive e do movimento negro, modelo
