Ajustes pre link

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preload" as="script" href="https://connect.facebook.net">   
+    <link rel="preload" as="script" href="https://www.google-analytics.com">  
+    <link rel="preload" as="script" href="https://www.googletagmanager.com">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Autocuidado e Saúde Mental da Mulher durante isolamento">
     <meta name="description" content="Somos um portal de conteúdo feito por e para mulheres que querem falar 
